[gd_scene load_steps=4 format=3 uid="uid://csjfsy6sywdvm"]

[ext_resource type="Script" uid="uid://d3b1s8lnqbdx8" path="res://screens/main_menu.gd" id="1_ocono"]

[sub_resource type="Theme" id="Theme_ocono"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3cyw"]
bg_color = Color(0.7330457, 0.761021, 0.76061004, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ocono")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ocono")
theme_override_styles/panel = SubResource("StyleBoxFlat_p3cyw")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 190
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 190
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 71
text = "Git Time Tracker"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TrackTimeBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Track Time"

[node name="SettingsBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="ManualBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Manual"

[node name="QuitBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TrackTimeBtn" to="." method="_on_track_time_btn_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ManualBtn" to="." method="_on_manual_btn_button_down"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_button_down"]
